# narratwin-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trufflehogignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  semgrep.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: stage_guardrail.yml
.github/workflows/: ci.yml  eval-smoke.yml  quality-gates.yml  quality.yml  security.yml
backend/: Dockerfile  __init__.py
backend/app/: avatar_video_provider.py  hosted_demo.py  issue280.py  main.py  stage4.py  stage6.py  stage7.py  tts_provider.py
demo/: stage8_seed_project.md
docs/: AI_BUILD_BRIEF.md  AI_SAFETY_AND_EVALUATION.md  API_CONTRACT.md  ARCHITECTURE.md  CODEX_OPERATING_MODEL.md  DATA_MODEL.md  ENGINEERING_PROCESS_RCA.md  EVAL_REPORT.md  LAUNCH_LEVELS.md  LOCAL_DEVELOPMENT.md  METHODOLOGY.md  NORTH_STAR_METRICS.md  OBSERVABILITY_AND_COST.md  PHASE_PLAN.md  PORTABILITY_STRATEGY.md  PRD.md  PRD_RED_TEAM_REVIEW.md  PRODUCT_STRATEGY.md  PROJECT_AVATAR_PACK.md  PROJECT_GOVERNANCE_LEARNINGS.md  PROJECT_LEARNINGS_TRACKER.md  QUALITY_GATES.md  RECOMMENDED_REVIEW_ITEMS.md  RELEASE_CHECKLIST.md  RELEASE_QUALITY_BAR.md  RELEASE_READINESS_REVIEW.md  REPOSITORY_GUARDRAILS.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  REVIEW_RIGOR_RETROSPECTIVE.md  RISK_REGISTER.md  ROADMAP.md  RUNBOOK.md  SECURITY_AND_PRIVACY.md  SKILLS_AND_CODEX_SETUP.md  SKILL_EXECUTION_PLAN.md  SKILL_LOCK.md  SKILL_SELECTION_AND_EVIDENCE.md  SKILL_TRUST_REVIEW.md  STAGE2_ARCHITECTURE_CONTRACT.json  STAGE2_HUMAN_REVIEW_CHECKLIST.md  (+6 more)
docs/ADR/: 0000-adr-process.md  0001-architecture-approach.md  0001-system-architecture.md  0002-provider-agnostic-adapters.md  0002-rag-storage.md  0003-free-mode-vs-premium-mode.md  0003-llm-provider-routing.md  0004-avatar-provider-adapter.md  0005-observability-and-evals.md  0006-stage8-release-hardening.md  0007-local-principal-contract.md  0008-postgresql-durability-schema-boundary.md  0009-context2-idempotency-lease-outbox-contract.md  0010-context3-migrations-rollback-compatibility.md  0011-context4-backup-restore-drill.md  0012-context5-metrics-slos-watch.md  0013-ch01-migration-baseline-runner.md  0014-ch02-acid-cas-storage-kernel.md  0015-ch04-idempotency-semantics.md  0016-ch05-lease-fencing.md  0017-ch06-committed-outbox.md  0018-ch03-stage4-durable-graph.md  0019-ch16-consent-capture.md  0020-ch07-stage6-durable-replay.md  0021-ch08-stage7-render-artifact-state.md  0022-ch09-technical-rollback-compatibility.md  0023-local-restore-integrity-drill.md  0024-ch10-production-metrics-contract.md  0025-ch11-slo-error-budget.md  0026-ch14-restore-readiness-contract.md  0027-production-like-durability-platform-ownership.md  0028-local-lighthouse-browser-selection.md  0029-ch-m1-02-real-stack-evidence.md  0030-mode1-stage6-stage7-bundle-binding.md  0031-frontend-lighthouse-audit-remediation.md  0032-local-demo-refusal-ux-boundary.md  0033-checkpoint3-real-browser-acceptance-evidence.md  0034-c3a-r2-full-project-multilingual-gate.md  (+5 more)
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.checkpoint3.config.ts  playwright.config.ts  playwright.issue280.config.ts  playwright.real-stack.config.ts
perf/: stage8_locustfile.py
portfolio/: README.md
prompts/: codex_slice1_prompt.md  codex_stage0_strategy_prompt.md
scripts/: governance_preflight_github.py  governance_preflight_repository.py  governance_preflight_v1.py  guardrails_check.py
(+245 files in other folders)
