[project]
name = "narratwin-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "fastapi>=0.138.2",
    "litellm>=1.90.1",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "semgrep>=1.168.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
files = ["backend", "scripts", "tests"]
