[project]
name = "narratwin-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "audioop-lts>=0.2.2",
    "babel>=2.18.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.2",
    "langcodes>=3.5.1",
    "langfuse>=4.12.0",
    "markdown>=3.10.2",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "pgvector>=0.4.2",
    "prometheus-client>=0.25.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "srt>=3.5.3",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
eval = [
    "datasets>=5.0.0",
]
providers = [
    "litellm>=1.90.1",
    "openai>=2.44.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "locust>=2.44.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
files = ["backend", "scripts", "tests"]
